[tool.poetry]
name = "pypkgs_sk"
version = "0.1.0"
description = "Package creation for DSCI 524"
authors = ["Sukhdeep kaur <sukhdeep_2929@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
